[package]
name = "gierm"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
crossterm = "0.28.1"
dotenv = "0.15.0"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = {version = "0.12.8", features = ["blocking", "json"]}
serde_json = "1.0.132"
tokio = {version = "1.41.0", features = ["full"]}
